<?xml version="1.0"?>
<package>
  <name>script_executor_skill_server</name>
  <version>1.0.0</version>
  <description>The script_executor_skill_server package</description>

  <maintainer email="carloscosta.cmcc@gmail.com">Carlos Miguel Costa</maintainer>

  <license>BSD3</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>script_executor_skill_msgs</build_depend>
  
  <run_depend>actionlib</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>script_executor_skill_msgs</run_depend>

</package>